Fix Incorrect Field Names In ShardingDataTransformMetrics

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding NYC 2022-04-04
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Some fields are being reported with the incorrect name in currentOp and serverStatus. These are as follows:

      CurrentOp

      Expected: "op", Actual: "command"
      Expected: "originatingCommand", Actual: "originalCommand"

      ServerStatus

      Expected: "documentsProcessed", Actual: "documentsCopied"
      Expected "bytesWritten", Actual: "bytesCopied"

            Assignee:
            Brett Nawrocki
            Reporter:
            Brett Nawrocki
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: