SERVER-64368 Fix incorrect field names in ShardingDataTransformMetrics