src/mongo/db/s/resharding/resharding_metrics_new_test.cpp
@@ -84,8 +84,8 @@ public:
 
     void verifyCommonCurrentOpFields(const BSONObj& report) {
         ASSERT_EQ(report.getStringField("type"), "op");
-        ASSERT_EQ(report.getStringField("command"), "command");
-        auto originalCommand = report.getObjectField("originalCommand");
+        ASSERT_EQ(report.getStringField("op"), "command");
+        auto originalCommand = report.getObjectField("originatingCommand");
         ASSERT_EQ(originalCommand.getStringField("reshardCollection"), kTestNamespace.toString());
         ASSERT_EQ(originalCommand.getObjectField("key").woCompare(kShardKey), 0);
         ASSERT_EQ(originalCommand.getStringField("unique"), "false");
